chnage ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,37 @@ backend/node_modules/
 # Ignore uploads folder in backend
 backend/uploads/
 
-# Ignore environment files (optional)
-*.env
+# Ignore environment files
+.env
+.env.*
 
-# Ignore log files (optional)
+# Ignore log files
 *.log
+
+# Ignore OS-specific files
+.DS_Store
+Thumbs.db
+
+# Ignore dependency directories
+node_modules/
+
+# Ignore build/output directories
+dist/
+build/
+out/
+
+# Ignore IDE-specific files
+.vscode/
+.idea/
+
+# Ignore npm/yarn cache
+.npm
+.yarn
+.yarnrc
+package-lock.json
+yarn.lock
+
+# Ignore debug logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
